spacing issue

--- a/css/default.css
+++ b/css/default.css
@@ -146,5 +146,4 @@ div.frameLinks a:active {
 div.about {
 	font: "Palatino Linotype" 12px;
 	color: #FFF;
-	width: 790px;
 	text-align: justify;} 
